--- a/configurations/architectural_cluster_config.json
+++ b/configurations/architectural_cluster_config.json
@@ -3,7 +3,7 @@
     "clusters_output_xlsx": "output/report.xlsx",
     "cluster_sheet_name": "cluster",
     "metrics_sheet_name": "metrics",
-    "cluster_cut_height": 0.4,
+    "cluster_cut_height": 0.1,
     "numeber_of_topic_to_infer": 2,
     "common_words_to_exclude": [
         "this",
@@ -12,6 +12,7 @@
         "imp",
         "sensor",
         "system",
+        "sys",
         "subsystem",
         "single",
         "dual",
