Add cluster topic chain
- Minor fix in word2vec
- Add cluster topic chain
- Add new config paramenters

--- a/configurations/architectural_cluster_config.json
+++ b/configurations/architectural_cluster_config.json
@@ -1,10 +1,12 @@
 {
-    "file_path": "matrices/testing_name.csv",
-    "clusters_output_xlsx": "output/report_selected.xlsx",
+    "file_path": "matrices/A_text.csv",
+    "clusters_output_xlsx": "output/A_text_v2.xlsx",
     "cluster_sheet_name": "cluster",
     "metrics_sheet_name": "metrics",
-    "cluster_cut_height": 0.7,
-    "numeber_of_topic_to_infer": 2,
+    "model_cluster_chain_sheet_name": "model_cluster_chain",
+    "cluster_cut_height": 0.07,
+    "method_to_infer_topics": "NATIVE",
+    "numeber_of_topic_to_infer": 3,
     "common_words_to_exclude": [
         "this",
         "instance",
@@ -24,7 +26,42 @@
         "functional",
         "devices",
         "hardware",
+        "software",
+        "test",
+        "models",
+        "model",
+        "examples",
+        "example",
+        "package",
+        "use",
         "\n",
-        ".aaxl"
+        "aaxl",
+        "aadl",
+        " a ",
+        " b ",
+        " c ",
+        " d ",
+        " e ",
+        " f ",
+        " g ",
+        " h ",
+        " i ",
+        " l ",
+        " m ",
+        " n ",
+        " o ",
+        " p ",
+        " q ",
+        " r ",
+        " s ",
+        " t ",
+        " u ",
+        " v ",
+        " z ",
+        " y ",
+        " j ",
+        " k ",
+        " w ",
+        " x "
     ]
 }
