--- a/configurations/word2vec_config.json
+++ b/configurations/word2vec_config.json
@@ -1,4 +1,62 @@
 {
-    "model_text_file_path":"model2text",
-    "similarity_csv_file_path": "matrices/w2v_similiarity.csv"
+    "model_text_file_path":"model2text_A",
+    "similarity_csv_file_path": "matrices/A_v2_text.csv",
+    "common_words_to_exclude": [
+        "this",
+        "instance",
+        "impl",
+        "imp",
+        "sensor",
+        "system",
+        "syst",
+        "sys",
+        "subsystem",
+        "single",
+        "dual",
+        "integration",
+        "standard",
+        "with",
+        "sub",
+        "functional",
+        "devices",
+        "hardware",
+        "software",
+        "test",
+        "models",
+        "model",
+        "examples",
+        "example",
+        "package",
+        "use",
+        "\n",
+        "aaxl",
+        "aadl",
+        " a ",
+        " b ",
+        " c ",
+        " d ",
+        " e ",
+        " f ",
+        " g ",
+        " h ",
+        " i ",
+        " l ",
+        " m ",
+        " n ",
+        " o ",
+        " p ",
+        " q ",
+        " r ",
+        " s ",
+        " t ",
+        " u ",
+        " v ",
+        " z ",
+        " y ",
+        " j ",
+        " k ",
+        " w ",
+        " x "
+    ]
+
 }
