--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-# get at https://bard.google.com/chat in the cookies section, this cookie never change
-Secure_1PSID= 
-
-# get at https://bard.google.com/chat in the cookies section, this cookie expire evry half our
-Secure_1PSIDTS= 
-
 DEFAULT_QUESTION= default question
 
-# Specify the format of answer
+# Specify the format of answer if you need one
 ANSWER_FORMAT= your answer format
+
+
+API_TYPE = ""
+API_BASE = ""
+API_VERSION = ""
+API_KEY = ""
+ENGINE_4K = ""
+ENGINE_16K= ""
