--- a/configurations/architectural_cluster_config.json
+++ b/configurations/architectural_cluster_config.json
@@ -1,15 +1,18 @@
 {
     "file_path": "matrices/A_text.csv",
-    "clusters_output_xlsx": "output/A_text_v2.xlsx",
+    "clusters_output_xlsx": "output/A_text_GPT.xlsx",
     "cluster_sheet_name": "cluster",
     "metrics_sheet_name": "metrics",
     "model_cluster_chain_sheet_name": "model_cluster_chain",
-    "cluster_cut_height": 0.07,
-    "method_to_infer_topics": "NATIVE",
+    "cluster_cut_height": 0.17,
+    "method_to_infer_topics": "GPT",
     "numeber_of_topic_to_infer": 3,
+    "min_cluster_size": 5,
+    "max_cluster_size": 214,
     "common_words_to_exclude": [
         "this",
         "instance",
+        "simple",
         "impl",
         "imp",
         "sensor",
@@ -22,6 +25,7 @@
         "integration",
         "standard",
         "with",
+        "subcompo",
         "sub",
         "functional",
         "devices",
@@ -33,10 +37,16 @@
         "examples",
         "example",
         "package",
+        "architecture",
         "use",
         "\n",
+        "aadlib",
+        "kaadl",
         "aaxl",
         "aadl",
+        "ksu",
+        "qa",
+        "v2",
         " a ",
         " b ",
         " c ",
@@ -62,6 +72,24 @@
         " j ",
         " k ",
         " w ",
-        " x "
+        " x ",
+        "c_scenario_ping__",
+        "c_scenario_",
+        "projects",
+        "project",
+        "ping",
+        "pong",
+        "event",
+        "tasks",
+        "task",
+        "some",
+        "types",
+        "type",
+        " of ",
+        " main ",
+        " thesis ",
+        " to ",
+        " libraries ",
+        " library "
     ]
 }
